Fixes sidebar shifting content

--- a/app/components/sidebar/styles.css
+++ b/app/components/sidebar/styles.css
@@ -1,5 +1,6 @@
 .sidebar {
   box-shadow: 5px 0 5px -3px #cecece;
+  background-color: white;
 }
 
 .sidebar-icon span {
